--- a/_config.yml
+++ b/_config.yml
@@ -11,11 +11,10 @@ highlighter: pygments
 title : Jekyll Bootstrap
 tagline: Site Tagline
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
-  feedburner : feedname
+  name : Manish Saraswat
+  email : manish06saraswat@gmail.com
+  github : saraswatmks
+  twitter : manish_saraswt
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
