--- a/_config.yml
+++ b/_config.yml
@@ -135,4 +135,9 @@ JB :
   # and include your custom code. Your custom file must be defined at:
   #   ./_includes/custom/[HELPER]
   # where [HELPER] is the name of the helper you are overriding.
-  
+
+# taken from: https://jekyllrb.com/docs/configuration/options/
+timezone : Asia/Kolkata
+
+
+ 
