--- a/_config.yml
+++ b/_config.yml
@@ -13,24 +13,48 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
-email:
+title: Building Data Products
+subtitle: real side of machine learning
+email: manish06saraswat@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-twitter_username: username
+  Building data products is my effort to help data scientists / machine
+  learning engineers to learn to deploy data science / machine learning models
+  in the apps using latest technologies / microservices and see them making 
+  an impact on the real world users.
+twitter_username: manish_saraswt
 minimal_mistakes_skin: "contrast"
+repository: "saraswatmks/saraswatmks.github.com"
 search: true
+search_full_content: true
+search_provider: google
+google:
+  search_engine_id: "012223211056456697546:4aue0owveqe"
+  instant_search: true
+
+# reference taken from https://github.com/daattali/beautiful-jekyll/blob/master/_config.yml
+disqus: "https-saraswat-github-io"
+
+
+# SEO related
+google_site_verification: "wQFfaZV_3m8VaDZ7hnM4BB5gGuVlZ2fYhBc48Fc3BTo"
+bing_site_verification: "570DB0A17D827E22CAEE287BBFAA2B92"
+
+# Analytics related
+gtag: "G-KLJBFF0EQ0"
+gtm: "GTM-M2F52F9"
+google_analytics: "UA-146372185-1"
 
 # Build settings
 markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
+
 # Outputting
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: Asia/Kolkata # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+encoding: "utf-8"
+markdown_ext: "markdown,mkdown,mkdn,mkd,md"
 
 include:
   - _pages
@@ -56,35 +80,38 @@ plugins:
   - jemoji
   - jekyll-include-cache
 
+# mimic GitHub Pages with --safe
+whitelist:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jekyll-include-cache
+
 author:
-  name   : "First Lastname"
-  avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  name   : "Manish Saraswat"
+  avatar : "/assets/images/manish-photo.jpg"
+  bio    : "Loves running, cooking, building & breaking stuffs:)"
+  location : Buenos Aires, Argentina <3
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "https://"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://twitter.com/manish_saraswt"
+    - label: "Linkedin"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://linkedin.com/in/saraswatmanish"
 
 footer:
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://twitter.com/manish_saraswt"
+    - label: "Linkedin"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://linkedin.com/in/saraswatmanish"
 
 defaults:
   # _posts
@@ -93,6 +120,7 @@ defaults:
       type: posts
     values:
       layout: single
+      classes: wide
       author_profile: true
       read_time: true
       comments: true
@@ -112,3 +140,4 @@ category_archive:
 tag_archive:
   type: liquid
   path: /tags/
+
