--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ author:
   name   : "Manish Saraswat"
   avatar : "/assets/images/manish-photo.jpg"
   bio    : "Loves running, cooking, building & breaking stuffs:)"
-  location : Buenos Aires, Argentina <3
+  location : Berlin, Germany
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
