--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Building Data Products
 subtitle: Do more with machine learning
-email: manish06saraswat@gmail.com
+email: s.manish@hotmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Building data products is my effort to help full stack data scientists / machine
   learning engineers to learn to deploy data science / machine learning models
@@ -38,7 +38,6 @@ comments:
   disqus:
     shortname: "https-saraswat-github-io"
 
-
 # SEO related
 google_site_verification: "aKzOYiMMl-_8MQbLQWXZL2-ZnpaFcOmZYWsju3OhXKY"
 bing_site_verification: "570DB0A17D827E22CAEE287BBFAA2B92"
@@ -49,10 +48,9 @@ bing_site_verification: "570DB0A17D827E22CAEE287BBFAA2B92"
 
 analytics:
   provider: "google"
-  google: 
+  google:
     tracking_id: "UA-146372185-1"
     anonymize_ip: false
-
 
 # Build settings
 markdown: kramdown
@@ -92,12 +90,11 @@ plugins:
   - jemoji
   - jekyll-include-cache
 
-
 author:
-  name   : "Manish Saraswat"
-  avatar : "/assets/images/manish-photo.jpg"
-  bio    : "Loves running, cooking, building & breaking stuffs:)"
-  location : Berlin, Germany
+  name: "Manish Saraswat"
+  avatar: "/assets/images/mcpichu.jpg"
+  bio: "Loves running, building & breaking stuffs:)"
+  location: Berlin, Germany
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
@@ -127,7 +124,7 @@ defaults:
       layout: single
       classes: wide
       author_profile: true
-      read_time: true
+      read_time: false
       comments: true
       share: true
       related: true
@@ -145,4 +142,3 @@ category_archive:
 tag_archive:
   type: liquid
   path: /tags/
-
