--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ plugins:
 
 author:
   name: "Manish Saraswat"
-  avatar: "/assets/images/mcpichu.jpg"
+  avatar: "/assets/images/manish-photo.jpg"
   bio: "Loves running, building & breaking stuffs:)"
   location: Berlin, Germany
   links:
