--- a/_config.yml
+++ b/_config.yml
@@ -105,6 +105,9 @@ author:
     - label: "Linkedin"
       icon: "fab fa-fw fa-linkedin"
       url: "https://linkedin.com/in/saraswatmanish"
+    - label: "Stackoverflow"
+      icon: "fa-stack-overflow"
+      url: "https://stackoverflow.com/users/9299259/yolo"
 
 footer:
   links:
