--- a/_config.yml
+++ b/_config.yml
@@ -118,6 +118,16 @@ footer:
       icon: "fab fa-fw fa-linkedin"
       url: "https://linkedin.com/in/saraswatmanish"
 
+
+footer-links-active:
+  rss: false
+  facebook: false
+  email: true
+  twitter: true
+  github: true
+  linkedin: true
+  stackoverflow: true
+  
 defaults:
   # _posts
   - scope:
