--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,10 @@
 # in the templates via {{ site.myvariable }}.
 title: Floating Bytes
 subtitle: Build Better AI
+url: "https://saraswatmks.github.io"
+baseurl: ""
 description: >- # this means to ignore newlines until "baseurl:"
-  Floating Bytes is my place to share my knowledge, learnings with my community and 
+  Floating Bytes is my place to share my knowledge, learnings with my community and
   have useful & animated discussions.
 twitter_username: manish_saraswt
 minimal_mistakes_skin: "contrast"
