add gradient post

--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ plugins:
 author:
   name: "Manish Saraswat"
   avatar: "/assets/images/manish-photo.jpg"
-  bio: "Loves running, building & breaking stuffs:)"
+  bio: "Tech Staff Engineer"
   location: Berlin, Germany
   links:
     - label: "X"
