--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ plugins:
 author:
   name: "Manish Saraswat"
   avatar: "/assets/images/manish-photo.jpg"
-  bio: "Prod Staff Engineer"
+  bio: "Prod AI Engineer"
   location: Berlin, Germany
   links:
     - label: "X"
